# wondertrader

./: .gitignore  LICENSE  README.md  copy_bins_linux.sh  copy_bins_win.bat  updatelog.md
src/: CMakeLists - Copy.txt  CMakeLists.txt  README.md  all.sln  backtest.sln  datakit.sln  parsers.sln  product.sln  test.py  tools.sln  traders.sln  uft.sln
src/CTPLoader/: CMakeLists.txt  CTPLoader.cpp  CTPLoader.vcxproj  TraderSpi.cpp
src/CTPOptLoader/: CMakeLists - Copy (2).txt  CMakeLists - Copy.txt  CMakeLists.txt  CTPOptLoader.cpp  CTPOptLoader.vcxproj  TraderSpi.cpp
src/Includes/: CtaStrategyDefs.h  ExecuteDefs.h  FasterDefs.h  HftStrategyDefs.h  IBaseDataMgr.h  IBtDtReader.h  ICtaStraCtx.h  IDataFactory.h  IDataManager.h  IDataReader.h  IDataWriter.h  IExpFactory.h  IHftStraCtx.h  IHotMgr.h  ILogHandler.h  IParserApi.h  IRdmDtReader.h  ISelStraCtx.h  ISessionMgr.h  ITraderApi.h  IUftStraCtx.h  LoaderDef.hpp  RiskMonDefs.h  SelStrategyDefs.h  UftStrategyDefs.h  VVTSMarcos.h  VVTSVariant.hpp  VvTSCollection.hpp  VvTSContractInfo.hpp  VvTSDataDef.hpp  VvTSError.hpp  VvTSExpressData.hpp  VvTSObject.hpp  VvTSRiskDef.hpp  VvTSSessionInfo.hpp  VvTSStruct.h  VvTSSwitchItem.hpp  VvTSTradeDef.hpp  VvTSTypes.h  VvTSVersion.h  (+28 more)
src/LoaderRunner/: CMakeLists.txt
src/ParserCTP/: CMakeLists.txt  ParserCTP.cpp  ParserCTP.h
src/ParserCTPMini/: CMakeLists.txt  ParserCTPMini.cpp  ParserCTPMini.h
src/ParserCTPOpt/: CMakeLists.txt  ParserCTPOpt.cpp  ParserCTPOpt.h
src/ParserFemas/: CMakeLists.txt  ParserFemas.cpp  ParserFemas.h
src/ParserHuaX/: ParserHuaX.cpp  ParserHuaX.h  ParserHuaX.vcxproj
src/ParserOES/: CMakeLists.txt  ParserOES.cpp  ParserOES.h
src/ParserShm/: CMakeLists.txt  ParserShm.cpp  ParserShm.h
src/ParserUDP/: CMakeLists.txt  ParserUDP.cpp  ParserUDP.h
src/ParserXTP/: CMakeLists.txt  ParserXTP.cpp  ParserXTP.h
src/ParserXeleSkt/: CMakeLists.txt  ParserXeleSkt.cpp  ParserXeleSkt.h
src/ParserYD/: CMakeLists.txt  ParserYD.cpp  ParserYD.h
src/QuoteFactory/: CMakeLists.txt  QuoteFactory.vcxproj  copyfiles.bat  main.cpp
src/Share/: CodeHelper.hpp  Share.vcxproj  Share.vcxproj.filters  VvtKVCache.hpp  WtKVCache.hpp  ZtKVCache.hpp
src/TestBtPorter/: CMakeLists.txt  TestBtPorter.vcxproj  main.cpp
src/TestDtPorter/: CMakeLists.txt  TestDtPorter.vcxproj  main.cpp
src/TestExecPorter/: CMakeLists.txt  TestExecPorter.vcxproj  main.cpp
src/TestParser/: CMakeLists.txt  TestParser.vcxproj  main.cpp
src/TestPorter/: CMakeLists.txt  TestPorter.vcxproj  main.cpp
src/TestTrader/: CMakeLists.txt  TestTrader.vcxproj  main.cpp
src/TestUnits/: CMakeLists.txt  TestUnits.vcxproj  test_fastestmap.cpp  test_fmt.cpp  test_kvcache.cpp  test_lmdb.cpp  test_session.cpp  test_shm.cpp  test_utils.cpp
src/TraderATP/: CMakeLists.txt  TraderATP.cpp  TraderATP.h
src/TraderCTP/: CMakeLists.txt  TraderCTP.cpp  TraderCTP.h
src/TraderCTPMini/: CMakeLists.txt  TraderCTPMini.cpp  TraderCTPMini.h
src/TraderCTPOpt/: CMakeLists.txt  TraderCTPOpt.cpp  TraderCTPOpt.h
src/TraderDD/: CMakeLists.txt  TraderDD.cpp  TraderDD.h
src/TraderDumper/: CMakeLists.txt  Dumper.cpp  Dumper.h  PorterDefs.h  TraderAdapter.cpp  TraderAdapter.h  TraderDumper.vcxproj  TraderDumper.vcxproj.filters  ZtHelper.cpp  ZtHelper.h
src/TraderFemas/: CMakeLists.txt  TraderFemas.cpp  TraderFemas.h
src/TraderHTS/: CMakeLists.txt  TraderHTS.cpp  TraderHTS.h
src/TraderHuaX/: TraderHuaX.cpp  TraderHuaX.h
src/TraderMocker/: CMakeLists.txt  TraderMocker.cpp  TraderMocker.h
src/TraderOES/: CMakeLists.txt  TraderOES.cpp  TraderOES.h
src/TraderXTP/: CMakeLists.txt  TraderXTP.cpp  TraderXTP.h
src/TraderXTPXAlgo/: CMakeLists.txt  TraderXTPXAlgo.cpp  TraderXTPXAlgo.h
src/TraderYD/: CMakeLists.txt  TraderYD.cpp  TraderYD.h
src/VvTSTools/: CMakeLists.txt  VvTSBaseDataMgr.cpp  VvTSBaseDataMgr.h  VvTSDataFactory.cpp  VvTSDataFactory.h  VvTSHotMgr.cpp  VvTSHotMgr.h  VvTSLogger.cpp  VvTSLogger.h  WTSTools.vcxproj  WTSTools.vcxproj.filters
src/VvTSUtils/: CMakeLists.txt  VvTSCfgLoader.cpp  VvTSCmpHelper.hpp  VvtLMDB.hpp  WTSUtils.vcxproj  WTSUtils.vcxproj.filters
src/VvtBtCore/: CMakeLists.txt  CtaMocker.cpp  CtaMocker.h  EventNotifier.cpp  ExecMocker.cpp  ExecMocker.h  HftMocker.cpp  HftMocker.h  HisDataMgr.cpp  HisDataMgr.h  HisDataReplayer.cpp  HisDataReplayer.h  MatchEngine.cpp  MatchEngine.h  SelMocker.cpp  SelMocker.h  UftMocker.cpp  UftMocker.h  VvtHelper.cpp  WtBtCore.vcxproj  WtBtCore.vcxproj.filters
src/VvtBtPorter/: CMakeLists.txt  ExpCtaMocker.cpp  ExpCtaMocker.h  ExpHftMocker.cpp  ExpHftMocker.h  ExpSelMocker.cpp  ExpSelMocker.h  PorterDefs.h  VvtBtPorter.cpp  VvtBtPorter.h  VvtBtRunner.cpp  VvtBtRunner.h  WtBtPorter.vcxproj  WtBtPorter.vcxproj.filters
src/VvtBtRunner/: CMakeLists.txt  VvtBtRunner.cpp  WtBtRunner.vcxproj  WtBtRunner.vcxproj.filters
src/VvtCore/: ActionPolicyMgr.cpp  ActionPolicyMgr.h  CMakeLists.txt  CtaStraBaseCtx.cpp  CtaStraBaseCtx.h  CtaStraContext.cpp  CtaStraContext.h  CtaStrategyMgr.cpp  CtaStrategyMgr.h  EventNotifier.cpp  EventNotifier.h  HftStraBaseCtx.cpp  HftStraBaseCtx.h  HftStraContext.cpp  HftStraContext.h  HftStrategyMgr.cpp  HftStrategyMgr.h  IExecCommand.h  ITrdNotifySink.h  ParserAdapter.cpp  SelStraBaseCtx.cpp  SelStraBaseCtx.h  SelStraContext.cpp  SelStraContext.h  SelStrategyMgr.cpp  TraderAdapter.cpp  TraderAdapter.h  VvtArbiExecuter.cpp  VvtArbiExecuter.h  VvtCtaEngine.cpp  VvtCtaEngine.h  VvtCtaTicker.cpp  VvtCtaTicker.h  VvtDiffExecuter.cpp  VvtDiffExecuter.h  VvtDistExecuter.cpp  VvtDistExecuter.h  VvtDtMgr.cpp  VvtDtMgr.h  VvtEngine.cpp  (+21 more)
src/VvtCtaStraFact/: CMakeLists.txt  VvtCtaStraFact.cpp  VvtCtaStraFact.h  VvtStraDualThrust.cpp  VvtStraDualThrust.h  WtCtaStraFact.vcxproj  WtCtaStraFact.vcxproj.filters
src/VvtDataStorage/: CMakeLists.txt  DataDefine.h  VvtBtDtReader.cpp  VvtBtDtReader.h  VvtDataReader.cpp  VvtDataReader.h  VvtDataWriter.cpp  VvtDataWriter.h  VvtRdmDtReader.cpp  VvtRdmDtReader.h  WtDataStorage.vcxproj  WtDataStorage.vcxproj.filters
src/VvtDataStorageAD/: CMakeLists.txt  DataDefineAD.h  LMDBKeys.h  VvtBtDtReaderAD.cpp  (+9 more)
(+820 files in other folders)
