
cmake_minimum_required(VERSION 3.10)

#2. 确定工程名
PROJECT(TestBtPorter LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin/ZtBtPorter)

#7. 添加源码
file(GLOB SRCS *.cpp)

SET(LIBS
	ZtBtPorter
)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})

ADD_EXECUTABLE(TestBtPorter ${SRCS})
TARGET_LINK_LIBRARIES(TestBtPorter ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(TestBtPorter PROPERTIES
        LINK_FLAGS_RELEASE -s)
ENDIF ()