#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(VvtDtHelper LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin/VvtDtPorter)

#7. 添加源码
file(GLOB SRCS *.cpp)
file(GLOB HDRS *.h)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
ADD_LIBRARY(VvtDtHelper SHARED ${SRCS} ${HDRS})

SET(LIBS
	VvTSUtils
    VvTSTools
)
IF (MSVC)
ELSE (GNUCC)
	LIST(APPEND LIBS
		dl
		boost_filesystem
		)
ENDIF()

TARGET_LINK_LIBRARIES(VvtDtHelper ${LIBS})
IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(VvtDtHelper PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()
		